Update README and notebook

--- a/notebooks/automated_emailer.ipynb
+++ b/notebooks/automated_emailer.ipynb
@@ -133,7 +133,8 @@
     "Kind regards,\n",
     "Colin\n",
     "\"\"\"\n",
-    "    if recipient_email not in sent_email_addresses[\"Email\"].tolist():\n",
+    "    \n",
+    "    if recipient_email not in sent_email_addresses[\"Email\"].tolist(): # This prevents the script from accidentally spamming an email address with multiple emails\n",
     "        sent = pd.DataFrame({\"Email\": [recipient_email], \"Name\": [author]})\n",
     "        sent_email_addresses = pd.concat([sent_email_addresses,sent], ignore_index=True)\n",
     "        send_email(service, sender_email, recipient_email, subject, message_body)\n",
